[gd_scene load_steps=4 format=3 uid="uid://1prp83njmsie"]

[ext_resource type="Script" uid="uid://ta3c8obgthyg" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://c5othik3xlmjy" path="res://train.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://83ti4gdsb118" path="res://hud.tscn" id="5_lquwl"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="Train" parent="." instance=ExtResource("1_ig7tw")]

[node name="PickupTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[connection signal="timeout" from="PickupTimer" to="." method="_on_pickup_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
